--- a/template/login.html
+++ b/template/login.html
@@ -69,5 +69,7 @@
   <br/>
   <a class="lead pull-left" href="/forget"  target=_blank>Forget</a>
   <a class="lead pull-right" href="/register"  target=_blank>Register</a>
+  <br/>
+  <a class="lead" href="/test" target=_blank>test</a>
 </form>
 {{ end }}
