--- a/template/private.navbar.html
+++ b/template/private.navbar.html
@@ -37,6 +37,10 @@
           <li><a href="/ContactUs">Contact Us</a></li>
         </ul>
 
+        <ul class="nav navbar-nav">
+          <li><a href="/RayRun">RayRun</a></li>
+        </ul>
+
       </div>
     </div>
   </div>
