--- a/template/test.html
+++ b/template/test.html
@@ -1,193 +1,12 @@
-<h1 class="title">jquery-flipbox</h1>
-<div class="item">
-    <h2>Horizontal</h2>
-    <div class="box" id="box1">
-        <div class="side side1">1</div>
-        <div class="side side2">2</div>
-        <div class="side side3">3</div>
-        <div class="side side4">4</div>
-        <div class="side side5">5</div>
-        <div class="side side6">6</div>
-        <div class="side side7">7</div>
-        <div class="side side8">8</div>
-    </div>
-    <button class="prev reverse">&#9668; prev</button>
-    <button class="prev">&#9658; prev</button>
-    <button class="next reverse">&#9668; next</button>
-    <button class="next">&#9658; next</button>
-    <br>
-    <button class="jump reverse" data-index="0">&#9668; 1</button>
-    <button class="jump reverse" data-index="1">&#9668; 2</button>
-    <button class="jump reverse" data-index="2">&#9668; 3</button>
-    <button class="jump reverse" data-index="3">&#9668; 4</button>
-    <button class="jump reverse" data-index="4">&#9668; 5</button>
-    <button class="jump reverse" data-index="5">&#9668; 6</button>
-    <button class="jump reverse" data-index="6">&#9668; 7</button>
-    <button class="jump reverse" data-index="7">&#9668; 8</button>
-    <br>
-    <button class="jump" data-index="0">&#9658; 1</button>
-    <button class="jump" data-index="1">&#9658; 2</button>
-    <button class="jump" data-index="2">&#9658; 3</button>
-    <button class="jump" data-index="3">&#9658; 4</button>
-    <button class="jump" data-index="4">&#9658; 5</button>
-    <button class="jump" data-index="5">&#9658; 6</button>
-    <button class="jump" data-index="6">&#9658; 7</button>
-    <button class="jump" data-index="7">&#9658; 8</button>
-</div>
-<div class="item">
-    <h2>Vertical</h2>
-    <div class="box" id="box2">
-        <div class="side side1">1</div>
-        <div class="side side2">2</div>
-        <div class="side side3">3</div>
-        <div class="side side4">4</div>
-        <div class="side side5">5</div>
-        <div class="side side6">6</div>
-        <div class="side side7">7</div>
-        <div class="side side8">8</div>
-    </div>
-    <button class="prev reverse">&#9650; prev</button>
-    <button class="prev">&#9660; prev</button>
-    <button class="next reverse">&#9650; next</button>
-    <button class="next">&#9660; next</button>
-    <br>
-    <button class="jump reverse" data-index="0">&#9650; 1</button>
-    <button class="jump reverse" data-index="1">&#9650; 2</button>
-    <button class="jump reverse" data-index="2">&#9650; 3</button>
-    <button class="jump reverse" data-index="3">&#9650; 4</button>
-    <button class="jump reverse" data-index="4">&#9650; 5</button>
-    <button class="jump reverse" data-index="5">&#9650; 6</button>
-    <button class="jump reverse" data-index="6">&#9650; 7</button>
-    <button class="jump reverse" data-index="7">&#9650; 8</button>
-    <br>
-    <button class="jump" data-index="0">&#9660; 1</button>
-    <button class="jump" data-index="1">&#9660; 2</button>
-    <button class="jump" data-index="2">&#9660; 3</button>
-    <button class="jump" data-index="3">&#9660; 4</button>
-    <button class="jump" data-index="4">&#9660; 5</button>
-    <button class="jump" data-index="5">&#9660; 6</button>
-    <button class="jump" data-index="6">&#9660; 7</button>
-    <button class="jump" data-index="7">&#9660; 8</button>
-</div>
-<div class="item">
-    <h2>Speed & Easing</h2>
-    <div class="box" id="box3">
-        <div class="side side1">1</div>
-        <div class="side side2">2</div>
-        <div class="side side3">3</div>
-        <div class="side side4">4</div>
-        <div class="side side5">5</div>
-        <div class="side side6">6</div>
-        <div class="side side7">7</div>
-        <div class="side side8">8</div>
-    </div>
-    <button class="config" data-duration="1200" data-easing="ease">&#9658; slow</button>
-    <button class="config" data-duration="600" data-easing="ease">&#9658; medium</button>
-    <button class="config" data-duration="200" data-easing="ease">&#9658; fast</button>
-    <br>
-    <button class="config" data-duration="600" data-easing="linear">&#9658; linear</button>
-    <button class="config" data-duration="600" data-easing="ease">&#9658; ease</button>
-    <button class="config" data-duration="600" data-easing="cubic-bezier(0.68, -0.55, 0.265, 1.55)">&#9658; custom</button>
-</div>
-<div class="item">
-    <h2>Autoplay</h2>
-    <div class="box" id="box4">
-        <div class="side side1">1</div>
-        <div class="side side2">2</div>
-        <div class="side side3">3</div>
-        <div class="side side4">4</div>
-        <div class="side side5">5</div>
-        <div class="side side6">6</div>
-        <div class="side side7">7</div>
-        <div class="side side8">8</div>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 
+<p>Hello</p>
 
-<div class="item">
-    <h2>Dynamic content</h2>
-    <div class="box" id="box5">
-        <div class="side side1">&nbsp;</div>
-        <div class="side side2">&nbsp;</div>
-    </div>
-</div>
-
-<div class="item">
-    <h2>Clock</h2>
-    <div class="clock">
-        <div class="box">
-            <div class="side">0</div>
-            <div class="side">1</div>
-            <div class="side">2</div>
-            <div class="side">3</div>
-            <div class="side">4</div>
-            <div class="side">5</div>
-            <div class="side">6</div>
-            <div class="side">7</div>
-            <div class="side">8</div>
-            <div class="side">9</div>
-        </div>
-        <div class="box">
-            <div class="side">0</div>
-            <div class="side">1</div>
-            <div class="side">2</div>
-            <div class="side">3</div>
-            <div class="side">4</div>
-            <div class="side">5</div>
-            <div class="side">6</div>
-            <div class="side">7</div>
-            <div class="side">8</div>
-            <div class="side">9</div>
-        </div>
-        <span>:</span>
-        <div class="box">
-            <div class="side">0</div>
-            <div class="side">1</div>
-            <div class="side">2</div>
-            <div class="side">3</div>
-            <div class="side">4</div>
-            <div class="side">5</div>
-            <div class="side">6</div>
-            <div class="side">7</div>
-            <div class="side">8</div>
-            <div class="side">9</div>
-        </div>
-        <div class="box">
-            <div class="side">0</div>
-            <div class="side">1</div>
-            <div class="side">2</div>
-            <div class="side">3</div>
-            <div class="side">4</div>
-            <div class="side">5</div>
-            <div class="side">6</div>
-            <div class="side">7</div>
-            <div class="side">8</div>
-            <div class="side">9</div>
-        </div>
-        <span>:</span>
-        <div class="box">
-            <div class="side">0</div>
-            <div class="side">1</div>
-            <div class="side">2</div>
-            <div class="side">3</div>
-            <div class="side">4</div>
-            <div class="side">5</div>
-            <div class="side">6</div>
-            <div class="side">7</div>
-            <div class="side">8</div>
-            <div class="side">9</div>
-        </div>
-        <div class="box">
-            <div class="side">0</div>
-            <div class="side">1</div>
-            <div class="side">2</div>
-            <div class="side">3</div>
-            <div class="side">4</div>
-            <div class="side">5</div>
-            <div class="side">6</div>
-            <div class="side">7</div>
-            <div class="side">8</div>
-            <div class="side">9</div>
-        </div>
-    </div>
-</div>
+</body>
+</html>
