--- a/template/RayRun/DocumentsPRO.html
+++ b/template/RayRun/DocumentsPRO.html
@@ -457,10 +457,10 @@
     <h1>RayRun 文档</h1>
     <br>
     <ul>
-        <li><a href="/DocumentForRayRun">FScript</a></li>
-        <li><a href="/DocumentForRayRun1">E_IRI</a></li>
-        <li><a href="/DocumentForRayRun2">E_PRO</a></li>
-        <li><a href="/DocumentForRayRun3">R_AH0</a></li>
+        <li><a href="/DocumentForRayRunScript">FScript</a></li>
+        <li><a href="/DocumentForRayRunIRI">E_IRI</a></li>
+        <li><a href="/DocumentForRayRunPRO">E_PRO</a></li>
+        <li><a href="/DocumentForRayRunAH0">R_AH0</a></li>
         <li><a href="/RayRun">返回 </a></li>
     </ul>
     <h2 id="_name">指令名称</h2>
@@ -522,7 +522,8 @@
             </div>
             <div class="literalblock">
                 <div class="content">
-                    <pre>E_PRO()</pre>
+                    <pre>@ main
+E_PRO()</pre>
                 </div>
             </div>
 
@@ -535,7 +536,8 @@
             </div>
             <div class="literalblock">
                 <div class="content">
-                    <pre>E_IRI(2017-04-03)</pre>
+                    <pre>@ main
+E_PRO(2017-04-03)</pre>
                 </div>
             </div>
 
@@ -543,7 +545,7 @@
     </div>
     <div id="footer">
         <div id="footer-text">
-            Last updated 2019-02-26 19:31:11 UTC
+            Last updated 2019-05-07
         </div>
     </div></div>
 </body>
