--- a/template/RayRun/DocumentsAH0.html
+++ b/template/RayRun/DocumentsAH0.html
@@ -457,10 +457,10 @@
     <h1>RayRun 文档</h1>
     <br>
     <ul>
-        <li><a href="/DocumentForRayRun">FScript</a></li>
-        <li><a href="/DocumentForRayRun1">E_IRI</a></li>
-        <li><a href="/DocumentForRayRun2">E_PRO</a></li>
-        <li><a href="/DocumentForRayRun3">R_AH0</a></li>
+        <li><a href="/DocumentForRayRunScript">FScript</a></li>
+        <li><a href="/DocumentForRayRunIRI">E_IRI</a></li>
+        <li><a href="/DocumentForRayRunPRO">E_PRO</a></li>
+        <li><a href="/DocumentForRayRunAH0">R_AH0</a></li>
         <li><a href="/RayRun">返回 </a></li>
     </ul>
     <h2 id="_name">指令名称</h2>
@@ -548,7 +548,8 @@
             </div>
             <div class="literalblock">
                 <div class="content">
-<pre>E_IRI()
+                    <pre>@ main
+E_IRI()
 R_AH0(3,30)</pre>
                 </div>
             </div>
@@ -560,7 +561,8 @@ R_AH0(3,30)</pre>
             </div>
             <div class="literalblock">
                 <div class="content">
- <pre>E_PRO()
+<pre>@ main
+E_PRO()
 R_AH0(2-3,0.1,40)</pre>
                 </div>
             </div>
@@ -573,7 +575,8 @@ R_AH0(2-3,0.1,40)</pre>
             </div>
             <div class="literalblock">
                 <div class="content">
-                    <pre>E_PRO()
+                    <pre>@ main
+E_PRO()
 R_AH0(2,1,20-30)</pre>
                 </div>
             </div>
@@ -582,7 +585,7 @@ R_AH0(2,1,20-30)</pre>
     </div>
     <div id="footer">
         <div id="footer-text">
-            Last updated 2019-02-26 19:31:11 UTC
+            Last updated 2019-05-07
         </div>
     </div></div>
 </body>
