--- a/template/RayRun/DocumentsScript.html
+++ b/template/RayRun/DocumentsScript.html
@@ -474,7 +474,7 @@
             <div class="verseblock">
 <pre class="content">
     <em>子元素: functionName( param1 , param2 , param3 , ...)</em>
-    <em>关键字 : @ ( , )</em>
+    <em>关键字 : @ ( , ) ~</em>
 </pre>
             </div>
         </div>
@@ -493,7 +493,7 @@
                 <p>(param1,param2,param3,...)表示函数体，他表示函数的参数列表。 （ 为函数体起点， ) 表示函数体终点。
                 param1，为函数体的一个参数，同样保证param1为一段字符串，保证其中不包含空格，换行和关键字。一个函数
                 的参数为n,n >= 0。各个参数之间由逗号间隔，参数和逗号之间可以有任意数量的空格和换行。</p>
-                <p>其余在函数结构之外的字符且不为关键字的都为无关字符,</p>
+                <p>其余在函数结构之外的字符且不为关键字的都为无关字符。</p>
             </div>
         </div>
     </div>
@@ -540,7 +540,7 @@ E_IRI( AM )</pre>
             <div class="literalblock">
                 <div class="content">
                     <pre>@ main
-E_IRI(2013-04-03 ,
+E_IRI(2013~04~03 ,
        PM,
        35.31,
        20.0)</pre>
