--- a/template/Lab/aboutLab.html
+++ b/template/Lab/aboutLab.html
@@ -67,7 +67,6 @@
     2011年实验教学中心教师达24人，从最初的无线电物理实验扩展到电波传播与天线专业课实验、设计性综合实验及研究生无线电物理、光学学科实验，实验种类已达到40余种。目前实验教学总面积达100余平方米，实验仪器设备固定资产达到600余万元。每年向全校500余名本科生、100余名研究生全面开放。同时作为各类竞赛基地之一，每年参与竞赛学生达100余人，受益面广，辐射性强。
 </textarea>
     <br/>
-    <br/>
     <p class="lead"><a>People</a></p>
     <div class="htmleaf-container">
         <div class="demo" style="background: #f7f8fa;">
@@ -78,7 +77,7 @@
 
                             <div class="post-slide">
                                 <div class="post-header">
-                                    <a class=lead>Go</a>
+                                    <a class=lead>郭宏福</a>
                                 </div>
 
                                 <div class="pic">
@@ -121,4 +120,6 @@
             </div>
         </div>
     </div>
+<br/>
+
 {{end}}
