--- a/template/private.navbar.html
+++ b/template/private.navbar.html
@@ -16,11 +16,6 @@
 
       <div class="navbar-collapse collapse">
 
-
-        <ul class="nav navbar-nav">
-          <li><a href="/Data">Data</a></li>
-        </ul>
-
         <ul class="nav navbar-nav">
           <li><a href="/Market">Market</a></li>
         </ul>
@@ -30,15 +25,15 @@
         </ul>
 
         <ul class="nav navbar-nav">
-          <li><a href="/Lab">About Lab</a></li>
-        </ul>
-
-        <ul class="nav navbar-nav">
-          <li><a href="/ContactUs">Contact Us</a></li>
+          <li><a href="/Data">Plot</a></li>
         </ul>
 
         <ul class="nav navbar-nav">
           <li><a href="/RayRun">RayRun</a></li>
+        </ul>
+
+        <ul class="nav navbar-nav">
+          <li><a href="/Lab">Lab</a></li>
         </ul>
 
       </div>
