--- a/template/Lab/aboutLabLay.html
+++ b/template/Lab/aboutLabLay.html
@@ -5,17 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>EWE</title>
+        <link rel="stylesheet" type="text/css" href="static/css/normalize.css" />
+        <link rel="stylesheet" type="text/css" href="static/css/htmleaf-demo.css">
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+        <link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="static/css/main.css">
 
         <link rel="stylesheet" type="text/css" href="static/css/bootstrap-grid.min.css" /><!--CSS RESET-->
         <link rel="stylesheet" href="http://jrain.oscitas.netdna-cdn.com/tutorial/css/fontawesome-all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"/>
 
-        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/static/css/font-awesome.min.css" rel="stylesheet">
 
-        <style type="text/css">
-            .text{width:100%;height:30%}
-        </style>
         <style type="text/css">
             .img-responsive {
                 display: inline-block;
@@ -147,6 +148,13 @@
 
     </div> <!-- /container -->
 
+    <script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+    <script>window.jQuery || document.write('<script src="static/js/jquery-1.11.0.min.js"><\/script>')</script>
+    <script src="static/js/main.js"></script>
+
+    <script src="/static/js/jquery-2.1.1.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/check.js"></script>
 
     <script src="/static/js/jquery-1.11.0.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
