--- a/template/Tools/private.navbar.html
+++ b/template/Tools/private.navbar.html
@@ -1,10 +1,5 @@
-package makeTemplate
-
-//一些固定值
-
-const (
-	//导航栏
-	Navbar = `  <div class="navbar navbar-default navbar-static-top" role="navigation">
+{{ define "navbar" }}
+  <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -47,5 +42,5 @@ const (
 
       </div>
     </div>
-  </div>`
-)
+  </div>
+{{ end }}
