--- a/template/Lab/aboutLab.html
+++ b/template/Lab/aboutLab.html
@@ -77,7 +77,8 @@
 
                             <div class="post-slide">
                                 <div class="post-header">
-                                    <a class=lead>郭宏福</a>
+                                    <a class="lead">Professor</a>
+                                    <h3 class="post-title"><a>李良超</a></h3>
                                 </div>
 
                                 <div class="pic">
@@ -93,6 +94,7 @@
                                     <br/>参加工作时间： 1985年7月
                                     <br/>职称：教授;
                                     <br/>职务：电波测量与天线实验教学示范中心 主任
+                                    EWE项目的硬件设备负责人。
                                 </p>
                                 <a href="https://faculty.xidian.edu.cn/GHF1/zh_CN/index/318133/list/index.htm" class="read-more">home page</a>
                             </div>
@@ -109,9 +111,43 @@
                                     <li><i class="fa fa-users"></i> <a >Admin</a></li>
                                 </ul>
                                 <p class="post-description">
-                                    李良超 ,博士，副教授，“无线电物理”专业硕士导师。
+                                    李良超 ,博士，副教授，“无线电物理”专业硕士导师。EWE项目发起者，负责软件系统的构建。
                                 </p>
                                 <a href="https://faculty.xidian.edu.cn/LLC1/zh_CN/zhym/317182/list/index.htm" class="read-more">Home page</a>
+                            </div>
+
+                            <div class="post-slide">
+                                <div class="post-header">
+                                    <a class="lead">Student</a>
+                                    <h3 class="post-title"><a>汪衣宇</a></h3>
+                                </div>
+                                <div class="pic">
+                                    <img src="static/img/李良超.jpg" alt=""/>
+                                </div>
+                                <ul class="post-bar">
+                                    <li><i class="fa fa-users"></i> <a >Admin</a></li>
+                                </ul>
+                                <p class="post-description">
+                                    Ewe项目主要开发者之一，西电2016级学生。在Ewe中负责安卓端的开发。
+                                </p>
+                                <a href="https://faculty.xidian.edu.cn/LLC1/zh_CN/zhym/317182/list/index.htm" class="read-more">Home page</a>
+                            </div>
+
+                            <div class="post-slide">
+                                <div class="post-header">
+                                    <a class="lead">Stdudent</a>
+                                    <h3 class="post-title"><a>王忆凡</a></h3>
+                                </div>
+                                <div class="pic">
+                                    <img src="static/img/wyf.jpg" alt=""/>
+                                </div>
+                                <ul class="post-bar">
+                                    <li><i class="fa fa-users"></i> <a >Admin</a></li>
+                                </ul>
+                                <p class="post-description">
+                                    Ewe项目主要开发者之一，西电2016级学生。在Ewe中负责网站构建。喜爱写一些有趣的程序。如果你对我们的项目感兴趣，
+                                    可发邮件到2668340606@qq.com联系我。我们一起让他变的更好。
+                                </p>
                             </div>
 
                         </div>
