--- a/template/Success/Success.html
+++ b/template/Success/Success.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-        <img src="/static/img/success.jpg">
+        <img src="/static/img/success.png">
 
         <br/>
         <p type="lead">
