--- a/template/Tools/public.navbar.html
+++ b/template/Tools/public.navbar.html
@@ -1,33 +1,35 @@
 {{ define "navbar" }}
-  <div class="navbar navbar-default navbar-static-top" role="navigation">
+  <div class="navbar navbar-default navbar-static-top" role="navigation" style="background: white">
     <div class="container">
+
       <div class="navbar-header">
+
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+
         <div class="navbar-brand">
         <img src="/static/img/Logo/EWE_small.png">
         </div>
       </div>
 
 
-    <div class="navbar-collapse collapse">
+    <div class="navbar-collapse collapse" style="background: white">
 
-      <ul class="nav navbar-nav">
-        <li><a href="#" onClick="javascript :history.back(-1);">Back</a></li>
+      <ul class="nav navbar-nav" style="color: ">
+        <li><a href="#" onClick="javascript :history.back(-1);" style="font-size: 20px;color: #0b99bc"> Back</a></li>
       </ul>
 
+      <ul class="nav navbar-nav">
+        <li><a href="/login" style="font-size: 20px;color: #00bf00">Login</a></li>
+      </ul>
 
       <ul class="nav navbar-nav">
         <li>
-          <a href="javascript:window.opener=null;window.open('','_self');window.close();">Close</a></li>
-      </ul>
-
-      <ul class="nav navbar-nav">
-        <li><a href="/login">Login</a></li>
+          <a href="javascript:window.opener=null;window.open('','_self');window.close();" style="font-size: 20px;color: #ff76b5">Close</a></li>
       </ul>
 
     </div>
