--- a/template/Lab/aboutLab.html
+++ b/template/Lab/aboutLab.html
@@ -122,7 +122,7 @@
                                     <h3 class="post-title"><a>汪衣宇</a></h3>
                                 </div>
                                 <div class="pic">
-                                    <img src="static/img/李良超.jpg" alt=""/>
+                                    <img src="" alt=""/>
                                 </div>
                                 <ul class="post-bar">
                                     <li><i class="fa fa-users"></i> <a >Admin</a></li>
