--- a/template/Lab/aboutLab.html
+++ b/template/Lab/aboutLab.html
@@ -67,7 +67,7 @@
     2011年实验教学中心教师达24人，从最初的无线电物理实验扩展到电波传播与天线专业课实验、设计性综合实验及研究生无线电物理、光学学科实验，实验种类已达到40余种。目前实验教学总面积达100余平方米，实验仪器设备固定资产达到600余万元。每年向全校500余名本科生、100余名研究生全面开放。同时作为各类竞赛基地之一，每年参与竞赛学生达100余人，受益面广，辐射性强。
 </textarea>
     <br/>
-    <p class="lead"><a>People</a></p>
+    <p class="lead"><a>People 4</a></p>
     <div class="htmleaf-container">
         <div class="demo" style="background: #f7f8fa;">
             <div class="container">
@@ -116,6 +116,7 @@
                                 <a href="https://faculty.xidian.edu.cn/LLC1/zh_CN/zhym/317182/list/index.htm" class="read-more">Home page</a>
                             </div>
 
+
                             <div class="post-slide">
                                 <div class="post-header">
                                     <a class="lead">Student</a>
@@ -149,7 +150,6 @@
                                     可发邮件到2668340606@qq.com联系我。我们一起让他变的更好。
                                 </p>
                             </div>
-
                         </div>
                     </div>
                 </div>
