--- a/template/Lab/aboutLab.html
+++ b/template/Lab/aboutLab.html
@@ -1,7 +1,7 @@
 {{ define "content"}}
 
 
-    <div class="htmleaf-container">
+    <div class="htmleaf-container" xmlns="http://www.w3.org/1999/html">
         <div class="container">
             <div class="trent-slider">
                 <div class="t-slide current-t-slide">
@@ -78,11 +78,11 @@
                             <div class="post-slide">
                                 <div class="post-header">
                                     <a class="lead">Professor</a>
-                                    <h3 class="post-title"><a>李良超</a></h3>
+                                    <h3 class="post-title"><a>郭宏福</a></h3>
                                 </div>
 
                                 <div class="pic">
-                                    <img src="static/img/郭宏福.jpg" alt=""/>
+                                    <img src="static/img/People/ghf.jpg" alt=""/>
                                 </div>
 
                                 <ul class="post-bar">
@@ -105,7 +105,7 @@
                                     <h3 class="post-title"><a>李良超</a></h3>
                                 </div>
                                 <div class="pic">
-                                    <img src="static/img/李良超.jpg" alt=""/>
+                                    <img src="static/img/People/llc.jpg" alt=""/>
                                 </div>
                                 <ul class="post-bar">
                                     <li><i class="fa fa-users"></i> <a >Admin</a></li>
@@ -123,13 +123,14 @@
                                     <h3 class="post-title"><a>汪衣宇</a></h3>
                                 </div>
                                 <div class="pic">
-                                    <img src="" alt=""/>
+                                    <img src="static/img/People/wyy.jpg" alt=""/>
                                 </div>
                                 <ul class="post-bar">
                                     <li><i class="fa fa-users"></i> <a >Admin</a></li>
                                 </ul>
-                                <p class="post-description">
-                                    Ewe项目主要开发者之一，西电2016级学生。在Ewe中负责安卓端的开发。
+                                <br class="post-description">
+                                    Ewe项目主要开发者之一，西电2016级学生。在Ewe中负责安卓端的开发。喜欢唱、跳、编程、不会打篮球，曾入门安卓。粗浅地写过几个半成品。
+                                </br>安卓是一个基于Linux的移动端操作系统。安卓开发技术覆盖面广泛，入门门槛不高，学习成果反馈明显，但精进较为困难。
                                 </p>
                                 <a href="https://faculty.xidian.edu.cn/LLC1/zh_CN/zhym/317182/list/index.htm" class="read-more">Home page</a>
                             </div>
@@ -140,14 +141,14 @@
                                     <h3 class="post-title"><a>王忆凡</a></h3>
                                 </div>
                                 <div class="pic">
-                                    <img src="static/img/wyf.jpg" alt=""/>
+                                    <img src="static/img/People/wyf.jpg" alt=""/>
                                 </div>
                                 <ul class="post-bar">
                                     <li><i class="fa fa-users"></i> <a >Admin</a></li>
                                 </ul>
                                 <p class="post-description">
-                                    Ewe项目主要开发者之一，西电2016级学生。在Ewe中负责网站构建。喜爱写一些有趣的程序。如果你对我们的项目感兴趣，
-                                    可发邮件到2668340606@qq.com联系我。我们一起让他变的更好。
+                                    Ewe项目主要开发者之一，西电2016级学生。在Ewe中负责网站构建。喜爱写一些有趣的程序。
+                                    <br/>如果你对我们的项目感兴趣， 可发邮件到2668340606@qq.com联系我。我们一起让他变的更好。
                                 </p>
                             </div>
                         </div>
