--- a/template/RayRun/DocumentsAH0.html
+++ b/template/RayRun/DocumentsAH0.html
@@ -516,8 +516,8 @@
                 <p>第三个参数angl，单位为°，表示电波的入射天顶角，取值为
                     (-90,90)的浮点数。</p>
                 <p>例子：</p>
-                <p><code>R_AH0(3-10,1,10)</code></p>
-                <p><code>R_AH0(2-3,0.1,40)</code></p>
+                <p><code>R_AH0(3~10,1,10)</code></p>
+                <p><code>R_AH0(2~3,0.1,40)</code></p>
             </div>
             <div class="paragraph">
                 <p>第三种，添加三个参数。该指令绘制频率相同，下不同入射角的平面波在电离层的射线轨迹。</p>
