--- a/template/Tools/public.navbar.html
+++ b/template/Tools/public.navbar.html
@@ -14,12 +14,13 @@
         <div class="navbar-brand">
         <img src="/static/img/Logo/EWE_small.png">
         </div>
+
       </div>
 
 
     <div class="navbar-collapse collapse" style="background: white">
 
-      <ul class="nav navbar-nav" style="color: ">
+      <ul class="nav navbar-nav">
         <li><a href="#" onClick="javascript :history.back(-1);" style="font-size: 20px;color: #0b99bc"> Back</a></li>
       </ul>
 
@@ -29,9 +30,8 @@
 
       <ul class="nav navbar-nav">
         <li>
-          <a href="javascript:window.opener=null;window.open('','_self');window.close();" style="font-size: 20px;color: #ff76b5">Close</a></li>
+          <a onclick="custom_close();" href="" style="font-size: 20px;color: #ff76b5">Close</a></li>
       </ul>
-
     </div>
 
     </div>
