--- a/template/DealWrong/DealWrongLayout.html
+++ b/template/DealWrong/DealWrongLayout.html
@@ -36,9 +36,20 @@
 
     <script src="/static/js/jquery-2.1.1.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-
-
-
+    <script language="javascript">
+        function custom_close(){
+            var userAgent = navigator.userAgent;
+            if (userAgent.indexOf("Firefox") != -1 || userAgent.indexOf("Chrome") !=-1) {
+                window.location.href="about:blank";
+            }else if(userAgent.indexOf('Android') > -1 || userAgent.indexOf('Linux') > -1){
+                window.opener=null;window.open('about:blank','_self','').close();
+            }else {
+                window.opener = null;
+                window.open("about:blank", "_self");
+                window.close();
+            }
+        }
+    </script>
     </body>
     </html>
 
