--- a/template/Lab/aboutLab.html
+++ b/template/Lab/aboutLab.html
@@ -137,7 +137,7 @@
 
                             <div class="post-slide">
                                 <div class="post-header">
-                                    <a class="lead">Stdudent</a>
+                                    <a class="lead">Student</a>
                                     <h3 class="post-title"><a>王忆凡</a></h3>
                                 </div>
                                 <div class="pic">
