--- a/template/Lab/aboutLabLay.html
+++ b/template/Lab/aboutLabLay.html
@@ -1,5 +1,5 @@
 {{ define "layout" }}
-
+<html>
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
