--- a/template/Download/download.html
+++ b/template/Download/download.html
@@ -13,7 +13,7 @@
 
             <div class="panel-body">
                 <a>{{.GetDate}}</a>
-                <div class="pull-right"><a href="/downloadFile?path={{.GetPath}}" download={{.GetTitle}}>Download</a></div>
+                <div class="pull-right"><a href="/downloadFile?path={{.GetPath}}&&name={{.GetTitle}}" download>Download</a></div>
             </div>
 
         </div>
