--- a/template/Market/market.html
+++ b/template/Market/market.html
@@ -14,6 +14,7 @@
             <p class="lead"><a>FeedBack</a></p>
             <textarea rows="5" class="text"  id="content" name="content" placeholder="   Any suggests for our andorid appliaction or webside can be edited.
    They will make us better.
+   If you want to ask us some questions, please leave your contact information.
    Thank you." required></textarea>
             <br/>
             <button class="btn btn-primary">Go</button>
