--- a/template/Plot/plot.html
+++ b/template/Plot/plot.html
@@ -35,11 +35,11 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <span class="lead"> <i class="fa fa-folder-o"></i> {{.GetName}}|  {{.GetTag}}</span>
-            <div class="pull-right"><a href="/deleteData?id={{.GetId}}&name={{.GetName}}"><i class="fa fa-remove"></i></a></div>
+            <div class="pull-right"><a href="/PlotDeleteData?id={{.GetId}}&name={{.GetName}}"><i class="fa fa-remove"></i></a></div>
         </div>
         <div class="panel-body">
             <div class="pull-right">
-                <a href="/draw?id={{.GetId}}&name={{.GetName}}&tag={{.GetTag}}">Draw</a>
+                <a href="/PlotDraw?id={{.GetId}}&name={{.GetName}}&tag={{.GetTag}}">Draw</a>
             </div>
             {{.GetTime}} {{.GetDescribe}}
         </div>
