--- a/template/Programs/programs.html
+++ b/template/Programs/programs.html
@@ -7,8 +7,8 @@
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs" role="tablist">
                             <li role="presentation" class="active"><a href="#Section1" aria-controls="home" role="tab" data-toggle="tab"><span><i class="fa fa-line-chart"></i></span>Plot</a></li>
-                            <li role="presentation"><a href="#Section2" aria-controls="profile" role="tab" data-toggle="tab"><span><i class="fa fa-rocket"></i></span>RayRun</a></li>
-                            <li role="presentation"><a href="#Section3" aria-controls="messages" role="tab" data-toggle="tab"><span><i class="fa fa-briefcase"></i></span> Section 3</a></li>
+                            <li role="presentation"><a href="#Section2" aria-controls="profile" role="tab" data-toggle="tab"><span><i class="fa fa-google-wallet"></i></span>RayRun</a></li>
+                            <li role="presentation"><a href="#Section3" aria-controls="messages" role="tab" data-toggle="tab"><span><i class="fa fa-rss"></i></span>PSR</a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content tabs">
@@ -16,7 +16,7 @@
                                 <h3>Plot</h3>
                                 <img src="/static/img/Programs/plot.png">
                                 <p style="font-size: 17px">Use this program, you can plot 2D curve.</p>
-                                <a href="/Data" style="font-size: 18px;">Go</a>
+                                <a href="/PlotCenter" style="font-size: 18px;">Go</a>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="Section2">
                                 <h3>RayRun</h3>
@@ -25,8 +25,9 @@
                                 <a href="/RayRun" style="font-size: 18px;">Go</a>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="Section3">
-                                <h3>Section 3</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec urna aliquam, ornare eros vel, malesuada lorem. Nullam faucibus lorem at eros consectetur lobortis. Maecenas nec nibh congue, placerat sem id, rutrum velit. Phasellus porta enim at facilisis condimentum. Maecenas pharetra dolor vel elit tempor pellentesque sed sed eros. Aenean vitae mauris tincidunt, imperdiet orci semper, rhoncus ligula. Vivamus scelerisque.</p>
+                                <h3>PSR</h3>
+                                <p>PSR(Phone Signal Recorder) is a program to record the signal of phone. The signal can be 4G or WI-FI.</p>
+                                <a href="/PSR" style="font-size: 18px;">Go</a>
                             </div>
                         </div>
                     </div>
